--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^11.2.12",
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.0",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
+    "angular-animations": "^0.11.0",
+    "canvas-confetti": "^1.4.0",
+    "firebase": "^8.4.3",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
